Fixed navbar menu text and icon alignment

--- a/src/common/components/navbar/_index.scss
+++ b/src/common/components/navbar/_index.scss
@@ -33,7 +33,7 @@
 .navbar-default {
   .switch-language {
     .dropdown-btn {
-      @apply ml-3 text-dark-default;
+      @apply ml-3 text-dark-default dark:text-white;
 
       .label {
         font-size: 1rem;
